<resources>

    <string name="finish">完成</string>
    <string name="app_name">FunKi</string>
    <string name="exit_app">即将退出Funki</string>
    <string name="exit">退出</string>
    <string name="enter">进入</string>
    <string name="visitor_sex">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="third_sex">第三性</string>
    <string name="sex_orientation">性取向</string>
    <string name="love_same_sex">我爱同性</string>
    <string name="love_different_sex">我爱异性</string>
    <string name="not_care_sex">我都不介意</string>
    <string name="love_both_sex">男女都爱</string>
    <string name="secret_sex">保密</string>
    <string name="input_age">请输入年龄</string>
    <string name="age">年龄</string>
    <string name="skip">跳过</string>
    <string name="confirm">确定</string>
    <string name="next_step">下一步</string>
    <string name="login_phone">行动电话</string>
    <string name="login_mail">邮箱</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number">+81</string>
    <string name="find_pwd">找回密码</string>
    <string name="refresh_word">点击刷新图片</string>
    <string name="set_new_pwd">请输入新的密码</string>
    <string name="pwd_success_ok">新密码设置完成</string>
    <string name="pwd_success_return">返回登录页</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="choose_country">选择分区号</string>
    <string name="complete">完成</string>
    <string name="login_input_password">请输入6-16位字元的密码</string>
    <string name="login_input_email">请输入邮箱地址</string>
    <item name="adapter_view_holder" type="integer"></item>

    <string name="gallery_all_folder">所有图片</string>
    <string name="gallery_shoot">拍摄照片</string>
    <string name="gallery_finish">( %1$d / %2$d )完成</string>
    <string name="gallery_gallery">相册</string>
    <string name="gallery_send">发送</string>
    <string name="gallery_msg_no_camera">没有系统相机</string>
    <string name="gallery_folder_name">%1$S(%2$d)</string>
    <string name="gallery_photo_num">(%d)</string>
    <string name="select_image_nickname_use">*该昵称已有人使用</string>
    <string name="select_image_word">请输入36个字元的字符</string>
    <string name="preview">预览</string>
    <string name="source_image">原图</string>
    <string name="source_image_m">原图(%SM)</string>
    <string name="gallery_photo">(%1$d/%2$d)</string>

    <string name="ucrop_tailor_photo">头像裁剪</string>

    <string name="visitor_fill_title">个人信息</string>
    <string name="visitor_title">必填信息</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tip_double_click_exit">再次点击退出Funki</string>

    <string name="msg_fragment">消息</string>
    <string name="store_fragment">商城</string>
    <string name="me_fragment">我的</string>

    <string name="home_fragment">主页</string>
    <string name="home_fragment_hot">热门</string>
    <string name="follow">关注</string>
    <string name="home_fragment_latest">最新</string>
    <string name="login_pwd_graph">由于隐私保护，系统在未验证改行动电话号为您本人所有时，不会告知您改行动电话号是否已注册</string>

    <!--navFragment-tag-->
    <string name="nav_fragment">navfragment</string>
    <string name="fragmenthome_search_user">用户</string>
    <string name="fragmenthome_search_live">直播</string>
    <string name="fragmenthome_search_video">视频</string>
    <string name="fragmenthome_search_dymic">动态</string>
    <string name="login_register_agree">注册代表您同意</string>
    <string name="login_register_forget">忘记密码</string>
    <string name="login_register_deal">FunKi使用协议</string>

    <string name="search_hot_recommend">热度推荐</string>
    <string name="search_live">LIVE</string>
    <string name="search_name">水原希子</string>
    <string name="search_lv">LV.74</string>
    <string name="search_signture">听说英国的电视剧拍的很赞，好想去拍摄现场，大家谁有英国</string>
    <string name="search_activity_recommend">活动推荐</string>

    <string name="serach_name">垃圾朋克</string>
    <string name="serach_count_person">2555人</string>
    <string name="search_location">名古屋</string>
    <string name="search_language">English</string>
    <string name="search_welcome">欢迎大家来看我的调酒表演</string>
    <string name="search_signature">柠檬红茶</string>
    <string name="search_signature2">电音控</string>
    <string name="search_price">25</string>
    <string name="search_ticket">票价:</string>
    <string name="world_rank">世界总榜</string>
    <string name="day_rank">日榜</string>
    <string name="world_rank_anchor">主播人气</string>
    <string name="world_rank_rich">土豪贡献榜</string>
    <string name="login_email_address">请输入邮箱地址</string>
    <string name="login_input_pwd_graph">图形验证码错误，请重新输入</string>
    <string name="login_email_sercet">由于隐私保护，系统在未验证改行动电话号为您本人所有时，不会告知您该邮箱是否已注册</string>
    <string name="login_pwd_number">您的行动电话号：1500 008063</string>
    <string name="login_receiver_msg">会收到一条含有验证码的短信</string>
    <string name="login_input_code">请输入验证码</string>
    <string name="login_input_phone_number">请输入行动电话</string>
    <string name="login_input_email_address">请输入邮箱地址</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_help_center">帮助中心</string>
    <string name="login_receiver_6_msg">会收到一条含有6位数字验证码的短信</string>
    <string name="rank_accompany">陪伴是最长情的告白</string>
    <string name="rank_gold_number">贡献175649金币</string>
    <string name="live_watching">在看</string>
    <string name="live_watching_percent">25%</string>
    <string name="login_find_by_phone">通过行动电话找回</string>
    <string name="login_find_by_email">通过注册邮箱找回</string>
    <string name="show_month">十一月</string>
    <string name="recently">最近</string>
    <string name="all">全部</string>
    <string name="day">4</string>
    <string name="week">周四</string>
    <string name="show_notice">注意：票会随着开播日期的临近二替身，越早购票价格越低</string>
    <string name="show_time">00:00~</string>
    <string name="show_tag">精选</string>
    <string name="show_comment">韩国摇滚女团的首次表演，欢迎大家来关注</string>
    <string name="show_price">14</string>
    <string name="show_percent">VIP -25%</string>
    <string name="show_ticket_sale">门票预售</string>
    <string name="show_normal_pay">普通支付:</string>
    <string name="show_normal_price">16</string>
    <string name="show_vip_pay">VIP &#160;&#160;支付:</string>
    <string name="show_vip_price">12</string>
    <string name="show_pay_percent">( -25 %)</string>
    <string name="show_user_balance">用户余额：50000</string>
    <string name="show_confirm_pay">确认支付</string>
    <string name="show_pay">支付:</string>
    <string name="recharge">充值</string>
    <string name="tv_show_balance_not_enough">余额不足请充值</string>
    <string name="me_name">鸡心螺饭</string>
    <string name="me_user_id">ID:2073614</string>
    <string name="me_send_diamond">送出5623</string>
    <string name="me_introduce">听说英国的电视剧拍的很赞，好像去拍摄现场，大家谁有英国的朋友</string>
    <string name="me_fans_count">42</string>
    <string name="me_follow_count">42</string>
    <string name="fans">粉丝</string>
    <string name="account">账户</string>
    <string name="me_account_num">5000</string>
    <string name="income">收益</string>
    <string name="excharge">兑换</string>
    <string name="balance">余额</string>
    <string name="withdraw">提现</string>
    <string name="live">直播</string>
    <string name="dynamic">动态</string>
    <string name="me_balance_unit">$</string>
    <string name="me_income_recharge_num">(可兑换340$)</string>
    <string name="me_income_balance_num">今日可体现200$</string>
    <string name="self_gallery">个人相册</string>
    <string name="vistor_record">访问记录</string>
    <string name="my_field_control">我的场控</string>
    <string name="blacklist">黑名单</string>
    <string name="order_management">订单管理</string>
    <string name="account_privacy_safety">账户隐私与安全</string>
    <string name="setting">设置</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="business_cooperate">商务合作</string>
    <string name="present">礼物</string>
    <string name="duration">时长</string>
    <string name="share">分享</string>
    <string name="me_lv_num">LV.76</string>
    <string name="bill">账单</string>
    <string name="filter">筛选</string>
    <string name="this_month">本月</string>
    <string name="fans_mine">我的粉丝</string>
    <string name="recharge_current_diamond">当前砖石数</string>
    <string name="more">更多</string>
    <string name="show_detail_content">三位美艳的Rocker致敬八十年代，每一个有传奇Star的巨星到场，除了视觉上的无限享受还有硬朗实力的摇滚演绎！</string>
    <string name="living_now">正在直播</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="ID">ID</string>
    <string name="sex">性别</string>
    <string name="language">语音</string>
    <string name="singnature">个性签名</string>
    <string name="loveStatus">恋爱状态</string>
    <string name="genderOrientation">性取向</string>
    <string name="livePlace">现居地</string>
    <string name="liveStatus">居住情况</string>
    <string name="stature">身高</string>
    <string name="weight">体重</string>
    <string name="shapes">体型</string>
    <string name="dress">穿着</string>
    <string name="profileHairColor">头发颜色</string>
    <string name="profileEyeColor">眼镜颜色</string>
    <string name="profileMyType">我的类型</string>
    <string name="profileLoveType">喜欢类型</string>
    <string name="profileReligionBelief">宗教信仰</string>
    <string name="profession">职业</string>
    <string name="personality">个性</string>
    <string name="profileDrinkStatus">饮酒状况</string>
    <string name="profileSmokeStatus">抽烟状况</string>
    <string name="profileLoveStatus">恋爱状态</string>
    <string name="profile_edit_photo">从相册中选择</string>
    <string name="profile_edit_take_photo">拍照</string>
    <string name="startLiveNormalLive">普通直播</string>
    <string name="startLiveInviteLive">邀请直播</string>
    <string name="startLiveTicketLive">门票直播</string>
    <string name="startLiveLevelLive">等级直播</string>
    <string name="save">保存</string>
    <string name="withdraw_mine">我的余额</string>
    <string name="excharge_record">提现记录</string>
    <string name="home_post_text">今天采访到了期盼已久的安妮海瑟薇，拍了几张照片。后来问道拍《黑暗骑士》的时候与希斯赖杰的关系怎么样，海瑟薇悲伤的说：他是我合作过最好的演员，愿他安息。</string>
    <string name="home_post_movie">安妮·海瑟薇在出演《公主日记》后被《人物》杂志封为2001年最佳新星。2005年，安妮·海瑟薇出演《断背山》。2006年，安妮·海瑟薇出演了《穿普喜剧类最佳女主角。2012年</string>
    <string name="dynamic_share">分享自己的新鲜事</string>
    <string name="photograph">照片</string>
    <string name="video">视频</string>
    <string name="personal_photo">相册(14/25)</string>
    <string name="personal_sercet_photo">私密相册(14/25)</string>
    <string name="title_activity_my_live_acticity">MyLiveActicity</string>
    <string name="title_activity_settings">SettingsActivity</string>


</resources>
