<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="87dp">

    <ImageView
        android:id="@+id/iv_show_photo"
        android:scaleType="fitXY"
        android:layout_width="111dp"
        android:layout_height="87dp"
        android:layout_marginLeft="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/showItemBg">

        <TextView
            android:id="@+id/tv_show_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_show_item_text"
            android:paddingBottom="2dp"
            android:paddingLeft="4dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:text="@string/show_tag"
            android:textColor="@color/vistorTvClickbg"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_show_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_show_tag"
            android:layout_marginTop="5dp"
            android:text="@string/show_time"
            android:textColor="@color/vistorTvTitle" />

        <TextView
            android:id="@+id/tv_show_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_show_time"
            android:layout_marginTop="9dp"
            android:text="@string/show_comment"
            android:textColor="@color/vistorTvTitle"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/ll_show_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_show_vip_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_price"
                android:textColor="@color/white">

            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iv_vip_diamond">

            </ImageView>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_show_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/ll_show_price"
            android:text="@string/show_ticket_sale"
            android:textColor="@color/homeTitleBg" />

        <TextView
            android:id="@+id/tv_vip_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ll_show_price"
            android:layout_marginTop="4dp"
            android:text="@string/show_percent"
            android:textColor="@color/newPwd" />
    </RelativeLayout>
</LinearLayout>