<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pwd_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_230C47"
    android:orientation="vertical"
    tools:context=".module.login.FindPwdGraphActivity">

    <com.hifunki.funki.module.login.widget.TitleBar
        android:id="@+id/tbPwdGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/iv_login_small_bg"
        android:clipToPadding="true"
        android:fitsSystemWindows="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/_28114D"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etIuputTel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="51dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/login_email_address"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:singleLine="true"
            android:textColorHint="@color/_4A2F75"
            android:textSize="17sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:src="@drawable/iv_close" />

        <EditText
            android:id="@+id/etIuputGraph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="51dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/login_input_pwd_graph"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:singleLine="true"
            android:textColorHint="@color/_4A2F75"
            android:textSize="17sp" />
    </LinearLayout>
    <!--点击图片刷新-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/refresh_word"
            android:textColor="@color/_4A2F75"
            android:textSize="13sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/_4A2F75"
            android:textSize="17sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/login_email_sercet"
        android:textColor="@color/_4A2F75"
        android:textSize="13sp"
        android:textStyle="bold" />
</LinearLayout>
